更新日時を追記するように変更

--- a/シーケンス図.md
+++ b/シーケンス図.md
@@ -262,3 +262,7 @@ sequenceDiagram
 このドキュメントは、サブモジュールの変更に応じてGitHub Actions + GitHub Copilotにより自動更新されます。  
 シーケンス図の追加・修正が必要な場合は、サブモジュール側のソースコードまたはコメントに処理フローを明記してください。
 
+---
+
+**最終更新日時（日本時間）**: 2026年2月13日 00:00:00
+
