--- a/機能定義書.md
+++ b/機能定義書.md
@@ -227,3 +227,7 @@
 このドキュメントは、サブモジュールの変更に応じてGitHub Actions + GitHub Copilotにより自動更新されます。  
 手動編集は避け、変更が必要な場合はサブモジュール側のソースコードまたはコメントを修正してください。
 
+---
+
+**最終更新日時（日本時間）**: 2026年2月13日 00:00:00
+
